--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <a-scene background="color: black">
         <a-assets>
-          <video id="penguin-sledding" autoplay loop="true" src="p2.mp4"></video>
+          <video id="penguin-sledding" autoplay loop="false" src="p2.mp4"></video>
         </a-assets>
       
         <!-- Using the asset management system. -->
