--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a-video src="#penguin-sledding" width="26" height="14" position="0 0 -20"></a-video>
       
         <!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
-         <a-video src="airbending.mp4"></a-video>
+         <a-video src="p2.mp4"></a-video>
       </a-scene>
 </body>
 </html>
